fix(books): review followup